@@ -40,8 +40,9 @@ public class InMemoryContentStore implements ContentStoreIF {
   // --- Static interface
 
   public static ContentStoreIF getInstance(TopicMapIF topicmap) {
-    if (store == null)
+    if (store == null) {
       store = new InMemoryContentStore();
+    }
     return store;
   }
 
@@ -53,14 +54,15 @@ public class InMemoryContentStore implements ContentStoreIF {
 
   @Override
   public boolean containsKey(int key) throws ContentStoreException {
-    return content.containsKey(new Integer(key));
+    return content.containsKey(key);
   }
 
   @Override
   public ContentInputStream get(int key) throws ContentStoreException {
-    byte[] data = content.get(new Integer(key));
-    if (data == null)
+    byte[] data = content.get(key);
+    if (data == null) {
       throw new ContentStoreException("No content for key " + key);
+    }
     return new ContentInputStream(new ByteArrayInputStream(data), data.length);
   }
 
@@ -81,7 +83,7 @@ public class InMemoryContentStore implements ContentStoreIF {
 
   @Override
   public boolean remove(int key) throws ContentStoreException {
-    Integer okey = new Integer(key);
+    Integer okey = Integer.valueOf(key);
     boolean result = content.containsKey(okey);
     content.remove(okey);
     return result;
